# Website-Todo

./: CLAUDE.md
.claude/: settings.local.json
.spec-kit/: config.yaml
.specify/memory/: constitution.md
backend/: .env  CLAUDE.md  auth.py  db.py  main.py  models.py  pyproject.toml  requirements.txt  tasks_crud.py
frontend/: CLAUDE.md  package-lock.json  package.json  postcss.config.mjs
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/sign-up/: page.tsx
frontend/src/context/: auth-context.tsx
frontend/src/lib/: api.ts  auth-client.ts
specs/api/: rest-endpoints.md
specs/features/: task-crud.md
